# python-poetry-scaffolding

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.package}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.package}}/src/main/python/{{cookiecutter.package}}/: __init__.py
{{cookiecutter.package}}/src/test/python/: test_{{cookiecutter.package}}.py
