[tool.poetry]
name = "{{cookiecutter.package}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.authors}}"]
license = "{{cookiecutter.license}}"
packages = [
    { include = "{{cookiecutter.package}}", from = "src/main/python" },
]


[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
